the app was rebuilt - 1) simplified structure; 2) authentification logic deleted

--- a/src/assets/styles/App.css
+++ b/src/assets/styles/App.css
@@ -7,8 +7,9 @@ html {
 
 .main {
     display: flex;
-    height: 40px;
-    width: 1400px;
+    align-items: center;
+    justify-content: center;
+    width: 55%;
     margin: 0 auto;
-    position: relative;
+    position: static;
 }
