Sorting script was updated. Styles were updated accordingly.

--- a/src/assets/styles/listItem.css
+++ b/src/assets/styles/listItem.css
@@ -1,27 +1,51 @@
 .task {
+    padding: 5px;
     min-height: 50px;
     display: flex;
     gap: 10px;
-    background-color: aquamarine;
+    background-color: var(--task-main-background);
 }
 
 .task__change-icon, .task__del-icon, .task__mark-icon {
     width: 20px;
     height: 20px;
+    cursor: pointer;
 }
 
 .task__name-cont {
-    width: 20%;
+    width: 15%;
 }
 
 .task__descr-cont {
     width: 40%;
 }
 
-.task__deadline-cont, .task__date-created {
-    width: 10%;
+.task__descr {
+    overflow: auto;
+    word-break: break-all;
+}
+
+.task__date-created {
+    width: 15%;
+}
+
+.task__deadline-wrap {
+    width: 15%;
+    display: flex;
+    flex-direction: column;
+    gap: 2px;
+    justify-content: center;
+    align-items: center;
 }
 
 .fulfilled {
     text-decoration: line-through;
+    background-color: var(--task-fulfilled-background);
+    color: rgba(0,0,0,0.2);
+}
+
+.task__manage-wrap {
+    display: flex;
+    justify-content: space-between;
+    width: 7%;
 }
