styles and app structure update

--- a/src/assets/styles/tasksContainer.css
+++ b/src/assets/styles/tasksContainer.css
@@ -1,7 +1,9 @@
 .tasks-container {
     width: 100%;
-    border: 1px solid lightgray;
     position: static;
+    -webkit-box-shadow: 0px 12px 22px 2px rgba(0, 0, 0, 0.10);
+    -moz-box-shadow: 0px 12px 22px 2px rgba(0, 0, 0, 0.10);
+    box-shadow: 0px 12px 22px 2px rgba(0, 0, 0, 0.10);
 }
 
 .tasks-container__h2-wrap {
@@ -9,10 +11,13 @@
     display: flex;
     justify-content: center;
     align-items: center;
+    border: 2px solid var(--dark-blue);
 }
 
 .tasks-container__h2 {
-    font-size: 25px;
+    text-align: center;
+    width: 100%;
+    font-size: 20px;
 }
 
 .tasks-list {
@@ -58,9 +63,12 @@
 }
 
 .deadline-sort-arrow, .created-sort-arrow {
-    width: 20px;
-    height: 20px;
+    width: 25px;
+    height: 25px;
     border-radius: 50%;
+    font-size: 20px;
+    align-items: center;
+    justify-content: center;
     background-color: white;
     transition-duration: 0.4s;
 }
@@ -71,4 +79,9 @@
 
 .descend {
     rotate: 180deg;
+}
+
+.active {
+    background-color: var(--dark-blue);
+    color: var(--text-white);
 }
