--- a/src/assets/styles/listItem.css
+++ b/src/assets/styles/listItem.css
@@ -27,13 +27,14 @@
 
 .task__date-created {
     width: 15%;
+    text-align: center;
 }
 
 .task__deadline-wrap {
     width: 15%;
     display: flex;
     flex-direction: column;
-    gap: 2px;
+    gap: 4px;
     justify-content: center;
     align-items: center;
 }
