--- a/src/assets/styles/standardBtn.css
+++ b/src/assets/styles/standardBtn.css
@@ -1,8 +1,13 @@
 .standard-btn {
-    height: 35px;
-    width: 100px;
+    height: 40px;
+    width: 140px;
     background-color: var(--dark-blue);
     color: var(--dim-white);
     cursor: pointer;
     border-radius: 6px;
+    transition-duration: 0.4s;
+}
+
+.standard-btn:hover {
+    color: var(--text-white);
 }
