--- a/src/assets/styles/addTaskStyle.css
+++ b/src/assets/styles/addTaskStyle.css
@@ -16,7 +16,7 @@
     height: 400px;
     border-radius: 6px;
     box-shadow: 0px 10px 10px 2px rgba(34, 60, 80, 0.15);
-    background-color: var(--dim-white);
+    background-color: var(--background-white);
 }
 
 .add-task__header-cont {
