--- a/src/assets/styles/tasksContainer.css
+++ b/src/assets/styles/tasksContainer.css
@@ -6,7 +6,7 @@
     box-shadow: 0px 12px 22px 2px rgba(0, 0, 0, 0.10);
 }
 
-.tasks-container__h2-wrap {
+.tasks-container__header-wrap {
     padding: 6px;
     display: flex;
     justify-content: center;
@@ -69,7 +69,7 @@
     font-size: 20px;
     align-items: center;
     justify-content: center;
-    background-color: white;
+    background-color: var(--text-white);
     transition-duration: 0.4s;
 }
 
